feat(store): build home page sections
